cmake_minimum_required(VERSION 2.8)  
PROJECT(trafficRecordServer)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Debug")
endif()
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS_DEBUG "-DBOOST_LOG_DYN_LINK -lboost_locale -O0 -g -Wall")
ADD_SUBDIRECTORY(src)
